--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "busooking",
+  "name": "latest",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
-    "mocha": "^9.1.1",
-    "selenium-webdriver": "^4.0.0-rc-1"
+    "@types/chai": "^4.2.10",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.29",
+    "@types/selenium-webdriver": "^4.0.9",
+    "chai": "^4.2.0",
+    "chromedriver": "^75.1.0",
+    "firefox-profile": "^1.3.0",
+    "jsonpath": "^1.0.2",
+    "mocha": "^6.2.0",
+    "mochawesome": "^4.0.1",
+    "moment": "^2.24.0",
+    "oracledb": "^4.2.0",
+    "pdfreader": "^1.2.13",
+    "pngjs": "^6.0.0",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "sync": "^0.2.5",
+    "xlsx": "^0.16.8"
   },
-  "devDependencies": {
-    "@types/chai": "^4.2.21",
-    "@types/node": "^16.9.1",
-    "@types/selenium-webdriver": "^4.0.15"
-  }
+  "devDependencies": {},
+  "description": ""
 }
